--- a/.classpath
+++ b/.classpath
@@ -15,9 +15,9 @@
 	<classpathentry exported="true" kind="lib" path="lib/jdbm-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/json.org-01.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/junit-3.8.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-cli-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/ant-1.8.1.jar"/>
-	<classpathentry kind="lib" path="lib/ant-launcher-1.8.1.jar"/>
-	<classpathentry kind="lib" path="lib/groovy-all-1.7.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-cli-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/ant-1.8.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/ant-launcher-1.8.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/groovy-all-1.7.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
