--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/ant-1.8.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/ant-launcher-1.8.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/groovy-all-1.7.3.jar"/>
+	<classpathentry exported="true" kind="con" path="GROOVY_DSL_SUPPORT"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
