--- a/build.xml
+++ b/build.xml
@@ -38,7 +38,7 @@
 					<attribute name="Date" value="${TODAY}"/>
 				</section>
 				<section name="Copyright">
-					<attribute name="Copy" value="(C) Joanju Software 2002-2011"/>
+					<attribute name="Copy" value="(C) Joanju Software 2002-2015"/>
 					<attribute name="License" value="Eclipse Public License version 1.0"/>
 				</section>
 			</manifest>
@@ -60,7 +60,7 @@
 
 
 	<target name="make_dotnet">
-		<exec executable="ikvmbin/ikvmc" dir="." failonerror="true">
+		<exec executable="${basedir}/ikvmbin/ikvmc.exe" dir="." failonerror="true">
 			<arg line="-out:proparse.net.dll -version:4.0.1.${build.number} -keyfile:proparse.snk proparse.jar lib\*.jar"/>
 		</exec>
 		<delete dir="prorefactor/projects/unittest/pubs" />
